# simstufff

./: README.md
rust-fluid/: Cargo.toml
rust-fluid/src/: fluid.rs  main.rs  vector.rs
rust-wasm/: Cargo.toml
rust-wasm/src/: fluid.rs  lib.rs  vector.rs
typescript/: index.html  package-lock.json  package.json
typescript/pkg/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
typescript/src/: fluid.ts  fluid2.ts  main.ts  math.ts  particle.ts  style.css  todo.ts  vector.ts
